# PIP_lidar_camera_2025

./: README.md  camera_launch.sh  lidar_launch.sh  lidar_topic_launch.sh  main_launch.sh  radar_environment.yaml  radar_requirments.txt
Camera/Data/: 041130220356.mvdat
Camera/log/: error_20250306-174114.515830  error_20250306-174224.543474  error_20250306-174331.563558  error_20250310-134730.30788  error_20250310-134821.31049  error_20250310-135030.32510  error_20250310-135048.32663  error_20250310-135109.32881  error_20250310-135138.33160  error_20250310-135242.33721  error_20250310-135335.34137  error_20250310-135506.34616  error_20250310-135741.35353  error_20250310-140126.36998  warning_20250306-174815.299540
rm_lidar_code/: CMakeCache.txt  CMakeLists.txt  CTestConfiguration.ini  CTestTestfile.cmake  Makefile  cmake_install.cmake  same_point_elimination.py
rm_lidar_code/ament_cmake_core/: mid70ppConfig.cmake  package.cmake
rm_lidar_code/ament_cmake_core/stamps/: package.xml.stamp
rm_lidar_code/ament_cmake_environment_hooks/: local_setup.dsv  local_setup.sh  package.dsv
rm_lidar_code/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
rm_lidar_code/clustering/: lidar_topic(past).py  lidar_topic.py
rm_lidar_code/clustering/scan_test/: background.ply  reality.ply  same_point_elimination.py  scan_background.py
rm_lidar_code/src/: device_discovery.cpp  livox_sdk.cpp  mid70pp_node(past).cpp  mid70pp_node.cpp
rm_lidar_code/src/base/network/unix/: network_util.cpp  network_util.cppZone.Identifier
